--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <main>
             <h1>Ce site web est en maintenance!</h1>
             <p>Revenez plus tard.</p>
+            <h2>Ceci est un test</h2>
             <img src="traffic-cone.png" alt="" />
         </main>
 
